merge from contraction branch